aside + main initial

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 :root {
   --brand-light: #F67841;
@@ -23,9 +24,17 @@
   --font-family: "Poppins", serif;
   --text: 400 1rem/1.5 var(--font-family);
   --text-sm: 400 0.875rem/1.4 var(--font-family);
-  --h1: 800 32px/120% var(--font-family);
-  --h2: 800 24px/120% var(--font-family);
-  --h3: 800 20px/120% var(--font-family);
-  --h4: 800 16px/120% var(--font-family);
 
+}
+body {
+  overflow: hidden;
+  font: var(--text);
+  color: var(--text-secondary);
+}
+h1, h2 {
+  color: var(--text-primary);
+}
+img {
+  max-width: 100%;
+  height: auto;
 }
