--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -1,3 +1,5 @@
+@import url(droparea.css);
+
 input, textarea, select {
   appearance: none;
   width: 100%;
@@ -15,14 +17,16 @@ label {
 }
 input:focus,
 select:focus,
-textarea:focus {
+textarea:focus,
+input[type="date"]:focus-within {
   outline: .25rem solid var(--surface-secondary);
   border: .125rem solid var(--stroke-highlight);
   outline-offset: .1px;
 }
 
 input[type="date"] {
-  &::-webkit-calendar {
+  position: relative;
+  &::-webkit-calendar-picker-indicator {
     opacity: 0;
   } 
 
