--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -60,4 +60,25 @@ input {
     border: 1px solid var(--stroke-default);
     color: var(--text-primary);
   }
+  &:invalid {
+    border: 0.125rem solid var(--semantic-erro);
+
+  }
+  & + small {
+    font: var(--text-sm);
+    color: #78716c;
+    display: inline-block;
+    margin-top: .25rem;
+  }
+  &[required] + .error {
+    display: flex;
+    align-items: center;
+    gap: .25rem;
+    font: var(--text-sm);
+    color: var(--semantic-erro);
+    margin-top: .25rem;
+  }
+  &:valid + .error{
+    display: none;
+  }
 }
